--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -16375,7 +16375,7 @@
       </notes>
       <segment>
         <source>Zement &amp; Garfunkel</source>
-        <target><![CDATA[Cemento y Garfunkle]]></target>
+        <target>Cemento y Garfunkle</target>
       </segment>
     </unit>
     <unit id="Kk9BS0m" name="Menschliche Ameisenkolonie">
