--- a/translations/soul.en.xlf
+++ b/translations/soul.en.xlf
@@ -2773,5 +2773,23 @@
         <target>Du kannst kein Icon ohne einen Titel wählen.</target>
       </segment>
     </unit>
+    <unit id="wMIPplV" name="Statistiken">
+      <notes>
+        <note category="german">Statistiken</note>
+      </notes>
+      <segment>
+        <source>Statistiken</source>
+        <target>Statistics</target>
+      </segment>
+    </unit>
+    <unit id="XvXLLaX" name="Errungenschaften">
+      <notes>
+        <note category="german">Errungenschaften</note>
+      </notes>
+      <segment>
+        <source>Errungenschaften</source>
+        <target>Earnings</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
