--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2486,7 +2486,7 @@
       <segment>
         <source>Setze ein Ausrufezeichen (!) vor einen Suchbegriff, um diesen auszuschließen. Beispiel: Wasser !Brunnen</source>
         <target><![CDATA[Usa el signo de exclamación (!) para excluir una palabra de tus búsquedas. Ejemplo: Agua !Pozo<br />
-        <strong>Nota</strong>: si quieres buscar un mensaje que NO tenga una frase, puedes hacer !"la ruina" para que se excluyan todos los mensajes que tengan "la ruina".>]]></target>
+        <strong>Nota</strong>: si quieres buscar un mensaje que NO tenga una frase, puedes hacer !"la ruina" para que se excluyan todos los mensajes que tengan "la ruina".]]></target>
       </segment>
     </unit>
     <unit id="HnC2uQZ" name="57f97d9">
