--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -17428,7 +17428,7 @@
       </notes>
       <segment>
         <source>Du verlässt deinen Posten?...</source>
-        <target>Du verlässt deinen Posten?...</target>
+        <target>¿Abandonas el puesto? En fin, eres tú quien decide...</target>
       </segment>
     </unit>
     <unit id="81G6y92" name="2bec6b6">
@@ -17437,7 +17437,7 @@
       </notes>
       <segment>
         <source>Bravo, du hast die verantwortungsvolle Aufgabe übernommen, deine Mitbürger vor den Untoten zu beschützen...</source>
-        <target>Bravo, du hast die verantwortungsvolle Aufgabe übernommen, deine Mitbürger vor den Untoten zu beschützen...</target>
+        <target>Bravo, has decidido correr el riesgo de salvar a tus compañeros en peligro desde esta noche...</target>
       </segment>
     </unit>
     <unit id="k23__KG" name="7d8dbe4">
@@ -17446,7 +17446,7 @@
       </notes>
       <segment>
         <source>Zur Information: Sobald du Wächter bist, kannst du danach wieder einfacher Bürger werden.</source>
-        <target>Zur Information: Sobald du Wächter bist, kannst du danach wieder einfacher Bürger werden.</target>
+        <target>Aviso: Aun siendo centinela, puedes volver a ser un simple habitante.</target>
       </segment>
     </unit>
     <unit id="zzRDqeC" name="52c1a7d">
@@ -17455,7 +17455,7 @@
       </notes>
       <segment>
         <source>Achtung: Wenn du jetzt kneifst, werden sich die anderen Bürger ziemlich sicher über dich lustig machen...</source>
-        <target>Achtung: Wenn du jetzt kneifst, werden sich die anderen Bürger ziemlich sicher über dich lustig machen...</target>
+        <target>Cuidado: esto puede provocar el odio o las risas de tus compañeros... </target>
       </segment>
     </unit>
     <unit id="rqIPcqm" name="%zombies% Zombies wurden von unseren Nachtwächtern gemetzelt!">
@@ -17748,7 +17748,7 @@
       </notes>
       <segment>
         <source>Neue und Tote</source>
-        <target>Neue und Tote</target>
+        <target>Llegadas y Muertos</target>
       </segment>
     </unit>
     <unit id="To01kGO" name="Zombieangriff (newspaper)">
