FR Translations for admin panel

--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -3103,7 +3103,7 @@
       </notes>
       <segment>
         <source>Teleportieren:</source>
-        <target>Teleportieren:</target>
+        <target>Se téléporter :</target>
       </segment>
     </unit>
     <unit id="rwkqvEL" name="In die Stadt">
@@ -3112,7 +3112,7 @@
       </notes>
       <segment>
         <source>In die Stadt</source>
-        <target>In die Stadt</target>
+        <target>En ville</target>
       </segment>
     </unit>
     <unit id="9L29399" name="Zu einer Zone">
@@ -3121,7 +3121,7 @@
       </notes>
       <segment>
         <source>Zu einer Zone</source>
-        <target>Zu einer Zone</target>
+        <target>Sur une zone</target>
       </segment>
     </unit>
   </file>
