--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -3103,7 +3103,7 @@
       </notes>
       <segment>
         <source>Teleportieren:</source>
-        <target>Se téléporter :</target>
+        <target>Téléportation:</target>
       </segment>
     </unit>
     <unit id="rwkqvEL" name="In die Stadt">
