Change of mind (2)

--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3076,7 +3076,7 @@
       </notes>
       <segment>
         <source>Teleportieren:</source>
-        <target>Teleport:</target>
+        <target>Teleportation:</target>
       </segment>
     </unit>
     <unit id="rwkqvEL" name="In die Stadt">
