ES Translation for hidden state

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2851,7 +2851,7 @@
       </notes>
       <segment>
         <source>Versteckt:</source>
-        <target>Versteckt:</target>
+        <target>Oculto:</target>
       </segment>
     </unit>
     <unit id="Fe136ia" name="Kein Bürger ausgewählt!">
