ES Translation fix for profession selection

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2887,7 +2887,7 @@
       </notes>
       <segment>
         <source>Einen Beruf auswählen:</source>
-        <target>Elección de una profesión:</target>
+        <target>Seleccionar una profesión:</target>
       </segment>
     </unit>
     <unit id="_Kc4j.e" name="Stadt anlegen">
