FR Translation fix for accessing a ranking text

--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -2399,7 +2399,7 @@
       </notes>
       <segment>
         <source>Zugriff auf die Rangliste einer bestimmten Saison:</source>
-        <target>Accès aux classement d'une saison particulière :</target>
+        <target>Accès au classement d'une saison particulière :</target>
       </segment>
     </unit>
     <unit id="haNfUqH" name="Alle Saisons">
