--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -18201,7 +18201,7 @@
       </notes>
       <segment>
         <source>&lt;span&gt;Wir kontrollieren die Zone ab sofort.&lt;/span&gt;</source>
-        <target><![CDATA[<span>Wir kontrollieren die Zone ab sofort.</span>]]></target>
+        <target><![CDATA[<span>¡Ahora la zona está bajo control!</span>]]></target>
       </segment>
     </unit>
     <unit id="20wAGQf" name="6489b1a">
