--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -2218,7 +2218,7 @@
       </notes>
       <segment>
         <source>Auf allen Browsern &amp; Geräten abmelden</source>
-        <target>Darse de baja en todos los navegadores y dispositivos</target>
+        <target>Cerrar sesión en todos los navegadores y dispositivos.</target>
       </segment>
     </unit>
     <unit id="AbYRB3R" name="82c4478">
