ES translation fix for showing icons en title

--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -1219,7 +1219,7 @@
       </notes>
       <segment>
         <source>Hier siehst du deine Titel und Icons.</source>
-        <target>Aquí puede ver sus títulos e íconos.</target>
+        <target>Aquí puedes ver tus títulos e íconos.</target>
       </segment>
     </unit>
     <unit id="GwJBg8s" name="Typ">
