--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -1474,7 +1474,7 @@
       </notes>
       <segment>
         <source>Mehr anzeigen</source>
-        <target>Motstar más</target>
+        <target>Mostrar más</target>
       </segment>
     </unit>
     <unit id="GgZ6pgy" name="Bist du sicher, dass du diesen Post an die Moderatoren melden willst?">
