ES translation : correction confirmation message after importing a soul from Zombinoia to MyHordes

--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -769,7 +769,7 @@
       </notes>
       <segment>
         <source>Bitte prüfe die unten angegebenen Daten und bestätige den Import, wenn alles OK ist.</source>
-        <target>Verifique los datos a continuación y confirme la importación si todo está bien.</target>
+        <target>Verifica los datos a continuación y confirma la importación si todo está bien.</target>
       </segment>
     </unit>
     <unit id="HwA4Kx3" name="Twinoid-Profil">
