Es translation : correction  description of prize section (usted => tú)

--- a/translations/soul.es.xlf
+++ b/translations/soul.es.xlf
@@ -1183,7 +1183,7 @@
       </notes>
       <segment>
         <source>Hier werden dir die Auszeichnungen angezeigt, welche du im Laufe der Zeit verdient hast.</source>
-        <target>Aquí puede ver los premios que ha ganado a lo largo del tiempo.</target>
+        <target>Aquí puedes ver los premios que has ganado a lo largo del tiempo.</target>
       </segment>
     </unit>
     <unit id="mxKbILU" name="Auszeichnung">
