ES translation : correction "Coming en Death"

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -17748,7 +17748,7 @@
       </notes>
       <segment>
         <source>Neue und Tote</source>
-        <target>Llegadas y Muertos</target>
+        <target>Llegadas y Muertes</target>
       </segment>
     </unit>
     <unit id="To01kGO" name="Zombieangriff (newspaper)">
