ES translation : correction of description for sending private message or posting message in the forum

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -9547,7 +9547,7 @@
       </notes>
       <segment>
         <source>Mit dieser Funktion kannst du alle Stadteinwohner auf einmal anschreiben. Du kannst damit in den Foren zudem Rollenspielthreads (RP) erstellen (Übertreibe es aber bitte nicht - Danke!).</source>
-        <target>Puedes enviar MP a todos en el pueblo a la vez. También puede iniciar hilos "RP" en los foros (¡no abuse de esto!).</target>
+        <target>Puedes enviar MP a todos en el pueblo a la vez. También puedes iniciar hilos "RP" en los foros (¡no abuses de esto!).</target>
       </segment>
     </unit>
     <unit id="U85YOFG" name="Freundschaft">
